# trade_agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  problem.md  pyproject.toml  sandbox_test.py
agents/fundamental_analyst/: __init__.py  workflow.py
agents/orchestrator/: router.py  state.py  workflow.py
agents/risk_assessor/: workflow.py
agents/sentiment_watchdog/: workflow.py
agents/synthesis/: workflow.py
agents/technical_analyst/: __init__.py  sandbox.py  state.py  workflow.py
agents/technical_analyst/prompts/: system.md
api/: main.py  schemas.py
docs/: agents.md  api.md  architecture.md  configuration.md  index.md  ingestion.md  mcp_servers.md  testing.md
ingestion/: news_pipeline.py  pdf_pipeline.py
libs/: llm.py
libs/domain_models/: __init__.py  analysis.py  candle.py  recommendation.py
mcp_servers/fundamental_data/: __init__.py  qdrant_store.py  server.py
mcp_servers/news_radar/: rss_scraper.py  server.py
mcp_servers/nse_fetcher/: __init__.py  dhan_client.py  server.py  yfinance_fallback.py
tests/: conftest.py  test_api_flows.py  test_units.py
